--- a/src/index.css
+++ b/src/index.css
@@ -175,6 +175,36 @@ body {
   box-shadow: 0 0.5rem 1 rem rgba(0, 0, 0, 0.15);
   transform: translateY(0); }
 
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all .2s;
+    outline-offset: 2rem; }
+    .composition__photo--p1 {
+      left: 0;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 0;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 40%;
+      top: 10rem; }
+    .composition__photo--p4 {
+      left: 10%;
+      top: 7rem; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #1a3db3;
+      transform: scale(1.05) translateY(-0.5rem);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.95); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(5, 60, 247, 0.6), rgba(5, 32, 123, 0.6)), url(./images/background.jpg);
