--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,5 +8,7 @@
 @import "pages/home";
 @import "components/button";
 @import "components/composition";
+@import "components/feature-box";
+@import "components/_card-turn.scss";
 @import "layout/header";
 @import "layout/grid";
