--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,5 +2,20 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -10vh;
+}
 
+.section-features {
+    padding: 20rem 0;
+    background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.6), rgba($color-primary-dark, 0.6)), url(./images/background2.jpg);
+    transform: skewY(-7deg);
+    margin-top: -8rem;
+    &>* {
+        transform: skewY(7deg);
+    }
+}
+
+.section-destinations {
+    background-color: $color-grey-light-1;
+    padding: 25rem 0 50rem 0;
+    margin-top: -9rem;
 }
