--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -6,6 +6,11 @@ $color-grey-dark:  #777;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
+$color-secondary-light:rgb(231, 164, 109);
+$color-secondary-dark: rgb(233, 117, 22);
+
+$color-tertiary-light:rgb(133, 231, 109);
+$color-tertiary-dark: rgb(72, 230, 32);
 
 //Grid
 $grid-width: 114rem;
