--- a/src/index.css
+++ b/src/index.css
@@ -235,12 +235,35 @@ body {
   .feature-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
-.card-turning {
-  background-color: red;
-  height: 50rem;
-  transition: all .8s; }
-  .card-turning:hover {
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .card__side {
+    background-color: red;
+    color: #fff;
+    height: 50rem;
+    transition: all .8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden; }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #e7a46d, #e97516); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #85e76d, #48e620); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #053cf7, #05207b); }
+  .card:hover .card__side--front {
     transform: rotateY(180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
 
 .header {
   height: 95vh;
