--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,15 @@ body {
 .u-margin-bottom-big {
   margin-bottom: 8rem; }
 
+.u-margin-top-small {
+  margin-top: 1.5rem; }
+
+.u-margin-top-medium {
+  margin-top: 4rem; }
+
+.u-margin-top-big {
+  margin-top: 8rem; }
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -122,7 +131,7 @@ body {
 
 .section-destinations {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -9rem; }
 
 .btn:link, .btn:visited {
@@ -150,6 +159,13 @@ body {
   color: #777;
   display: inline-block; }
   .btn-white::after {
+    background-color: #fff; }
+
+.btn-blue {
+  background-color: #1a3db3;
+  color: #fff;
+  display: inline-block; }
+  .btn-blue::after {
     background-color: #fff; }
 
 .btn::after {
@@ -241,15 +257,16 @@ body {
   position: relative;
   height: 50rem; }
   .card__side {
-    background-color: red;
-    color: #fff;
     height: 50rem;
     transition: all .8s ease;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    backface-visibility: hidden; }
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
     .card__side--front {
       background-color: #fff; }
     .card__side--back {
@@ -261,9 +278,62 @@ body {
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #053cf7, #05207b); }
   .card:hover .card__side--front {
-    transform: rotateY(180deg); }
+    transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px; }
+    .card__picture-1 {
+      background-image: linear-gradient(to right bottom, #e7a46d, #e97516), url(./images/pic1.jpg); }
+    .card__picture-2 {
+      background-image: linear-gradient(to right bottom, #85e76d, #48e620), url(./images/pic2.jpg); }
+    .card__picture-3 {
+      background-image: linear-gradient(to right bottom, #053cf7, #05207b), url(./images/pic3.jpg); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    text-align: right;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span-1 {
+      background-image: linear-gradient(to right bottom, rgba(231, 164, 109, 0.85), rgba(233, 117, 22, 0.85)); }
+    .card__heading-span-2 {
+      background-image: linear-gradient(to right bottom, rgba(133, 231, 109, 0.85), rgba(72, 230, 32, 0.85)); }
+    .card__heading-span-3 {
+      background-image: linear-gradient(to right bottom, rgba(5, 60, 247, 0.85), rgba(5, 32, 123, 0.85)); }
+  .card__detail {
+    padding: 3rem;
+    margin: 0 auto; }
+    .card__detail p {
+      width: 80%;
+      text-align: center;
+      font-size: 2rem;
+      padding: 2rem;
+      margin: 0 auto; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%) translateY(-50%);
+    width: 90%;
+    text-align: center; }
+  .card__info-box {
+    color: #fff;
+    padding: 1rem;
+    margin-bottom: 1rem; }
 
 .header {
   height: 95vh;
@@ -271,6 +341,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0% 0%, 100% 5%, 100% 85vh, 0% 100%);
   clip-path: polygon(0% 0%, 100% 5%, 100% 85vh, 0% 100%); }
   .header-text-box {
     position: absolute;
