--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,4 +1,4 @@
-.btn{
+.btn {
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -11,7 +11,7 @@
     }
     &:hover {
         transform: translateY(-3px);
-        box-shadow: 0 10px 20px rgba($color-black,.2);
+        box-shadow: 0 10px 20px rgba($color-black, .2);
         &::after {
             transform: scaleX(1.4) scaleY(1.6);
             opacity: 0;
@@ -19,11 +19,19 @@
     }
     &:active {
         transform: translateY(-1px);
-        box-shadow: 0 5px 10px rgba($color-black,.2);
+        box-shadow: 0 5px 10px rgba($color-black, .2);
     }
     &-white {
         background-color: $color-white;
-        color:$color-grey-dark;
+        color: $color-grey-dark;
+        display: inline-block;
+        &::after {
+            background-color: $color-white;
+        }
+    }
+    &-blue {
+        background-color: $color-primary;
+        color: $color-white;
         display: inline-block;
         &::after {
             background-color: $color-white;
@@ -32,20 +40,19 @@
     &::after {
         content: "";
         display: inline-block;
-        height:100%;
+        height: 100%;
         width: 100%;
         border-radius: 100px;
         position: absolute;
-        top:0;
-        left:0;
+        top: 0;
+        left: 0;
         z-index: -1;
         transition: all .4s;
     }
-    
-    
     &-animated {
         animation: moveInBottom .5s ease-out .75s;
-        animation-fill-mode: backwards; /*apply animation start before animation starts */
+        animation-fill-mode: backwards;
+        /*apply animation start before animation starts */
     }
     &-text {
         &:link,
