--- a/src/sass/components/_card-turn.scss
+++ b/src/sass/components/_card-turn.scss
@@ -1,13 +1,10 @@
 .card {
+    //Functionality
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
     height: 50rem;
-
     &__side {
-        background-color: red;
-        color: #fff;
-
         height: 50rem;
         transition: all .8s ease;
         position: absolute;
@@ -15,6 +12,9 @@
         left: 0;
         width: 100%;
         backface-visibility: hidden;
+        border-radius: 3px;
+        overflow: hidden;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
         &--front {
             background-color: $color-white;
         }
@@ -32,11 +32,77 @@
         }
     }
     &:hover &__side--front {
-        transform: rotateY(180deg);
+        transform: rotateY(-180deg);
     }
     &:hover &__side--back {
         transform: rotateY(0);
     }
-
-       
+    //Front side styling
+    &__picture {
+        background-size: cover;
+        height: 23rem;
+        background-blend-mode: screen;
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+        border-top-left-radius: 3px;
+        border-top-right-radius: 3px;
+        &-1 {
+            background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(./images/pic1.jpg);
+        }
+        &-2 {
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark), url(./images/pic2.jpg);
+        }
+        &-3 {
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark), url(./images/pic3.jpg);
+        }
+    }
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        color: $color-white;
+        position: absolute;
+        top: 12rem;
+        right: 2rem;
+        text-align: right;
+        width: 75%;
+    }
+    &__heading-span {
+        padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+        &-1 {
+            background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
+        }
+        &-2 {
+            background-image: linear-gradient(to right bottom, rgba($color-tertiary-light, .85), rgba($color-tertiary-dark, .85));
+        }
+        &-3 {
+            background-image: linear-gradient(to right bottom, rgba($color-primary-light, .85), rgba($color-primary-dark, .85));
+        }
+    }
+    &__detail {
+        padding: 3rem;
+        margin: 0 auto;
+        p {
+            width: 80%;
+            text-align: center;
+            font-size: 2rem;
+            padding: 2rem;
+            margin: 0 auto;
+        }
+    }
+    //Back side styling
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%) translateY(-50%);
+        width: 90%;
+        text-align: center;
+    }
+    &__info-box {
+        color: $color-white;
+        padding: 1rem;
+        margin-bottom: 1rem;
+    }
 }
