--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,27 +1,22 @@
-.header{
+.header {
     height: 95vh;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba($color-primary-light, 0.6),
-        rgba($color-primary-dark, 0.6)
-    ),
-    url(./images/background.jpg);
+    background-image: linear-gradient( to right bottom, rgba($color-primary-light, 0.6), rgba($color-primary-dark, 0.6)), url(./images/background.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
-    
+    -webkit-clip-path: polygon(0% 0%, 100% 5%, 100% 85vh, 0% 100%);
     clip-path: polygon(0% 0%, 100% 5%, 100% 85vh, 0% 100%);
     &-text-box {
         position: absolute;
         top: 40%;
-        left:50%;
+        left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
     }
     &--logo-box {
         position: absolute;
         top: 40px;
-        left:40px;
+        left: 40px;
     }
     &--logo {
         height: 35px;
