--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,8 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
-@import "components/_card-turn.scss";
+@import "components/card-turn";
+@import "components/testimonials";
+@import "components/bg-video";
 @import "layout/header";
 @import "layout/grid";
