--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -19,3 +19,8 @@
     padding: 25rem 0 15rem 0;
     margin-top: -9rem;
 }
+
+.section-testimonials {
+    padding: 15rem 0;
+    position: relative;
+}
