--- a/src/index.css
+++ b/src/index.css
@@ -392,7 +392,8 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: .15; }
+  opacity: .15;
+  overflow: hidden; }
   .bg-video__content {
     height: 100%;
     width: 100%;
@@ -417,7 +418,7 @@ body {
     top: 40px;
     left: 40px; }
   .header--logo {
-    height: 35px; }
+    height: 100px; }
 
 .row {
   max-width: 114rem;
