finished booking forn

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,5 +12,7 @@
 @import "components/card-turn";
 @import "components/testimonials";
 @import "components/bg-video";
+@import "components/booking";
+@import "components/form";
 @import "layout/header";
 @import "layout/grid";
