--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,20 +2,20 @@
 $color-primary:#1a3db3;
 $color-primary-light:#053cf7;
 $color-primary-dark:#05207b;
-$color-grey-dark:  #777;
+$color-grey-dark : #777;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+$color-grey-dark-1: #777;
+$color-grey-dark-2: #999;
 $color-secondary-light:rgb(231, 164, 109);
 $color-secondary-dark: rgb(233, 117, 22);
-
 $color-tertiary-light:rgb(133, 231, 109);
 $color-tertiary-dark: rgb(72, 230, 32);
-
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
-
 //default font size
 $default-font-size: 1.6rem;
