--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -24,3 +24,8 @@
     padding: 15rem 0;
     position: relative;
 }
+
+.section-book {
+    padding: 50rem 0;
+    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+}
