--- a/src/index.css
+++ b/src/index.css
@@ -338,7 +338,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%) translateY(-50%);
+    transform: translate(-50%, -50%);
     width: 90%;
     text-align: center; }
   .card__info-box {
@@ -541,13 +541,13 @@ body {
 
 .footer {
   background-color: #333;
-  padding: 5rem 0;
+  padding: 3rem 0;
   font-size: 1.4rem; }
   .footer__logo-box {
     text-align: center;
-    margin-bottom: 6rem; }
+    margin-bottom: 3rem; }
   .footer__logo {
-    width: 15rem;
+    width: 10rem;
     height: auto; }
   .footer__navigation {
     border-top: 1px solid #eee;
@@ -567,7 +567,7 @@ body {
       text-transform: uppercase;
       display: inline-block; }
     .footer__link:hover, .footer__link:active {
-      color: #48e620;
+      color: #eee;
       background-color: #333;
       box-shadow: 0 0.5rem 1.5rem rgba(238, 238, 238, 0.4);
       transform: scale(1.1); }
@@ -576,3 +576,115 @@ body {
     display: inline-block;
     color: #f7f7f7;
     border-top: 1px solid #eee; }
+
+.navigation__checkbox {
+  display: none; }
+
+.navigation__button {
+  background-color: #fff;
+  height: 7rem;
+  width: 7rem;
+  position: fixed;
+  top: 6rem;
+  right: 6rem;
+  border: 1px solid #05207b;
+  border-radius: 50%;
+  z-index: 102;
+  box-shadow: 1rem 1rem 3rem rgba(5, 32, 123, 0.2);
+  text-align: center;
+  cursor: pointer; }
+
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(#053cf7, #05207b);
+  z-index: 100;
+  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+
+.navigation__nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 101;
+  opacity: 0;
+  width: 0;
+  transition: all .8s; }
+
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+  width: 100%; }
+
+.navigation__item {
+  margin: 1rem; }
+
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  color: #fff;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+  background-size: 220%;
+  transition: all .4s; }
+  .navigation__link:link span, .navigation__link:visited span {
+    margin-right: 1.5rem;
+    display: inline-block; }
+
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #1a3db3;
+  transform: translateX(1rem); }
+
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(80); }
+
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100%; }
+
+.navigation__icon {
+  position: relative;
+  margin-top: 3.5rem; }
+  .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+    width: 3rem;
+    height: 2px;
+    background-color: #333;
+    display: inline-block; }
+  .navigation__icon::before, .navigation__icon::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    transition: all .2s; }
+  .navigation__icon::before {
+    top: -.8rem; }
+  .navigation__icon::after {
+    top: .8rem; }
+
+.navigation__button:hover .navigation__icon::before {
+  top: -1rem; }
+
+.navigation__button:hover .navigation__icon::after {
+  top: 1rem; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon {
+  background-color: transparent; }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+  top: 0;
+  transform: rotate(135deg); }
+
+.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+  top: 0;
+  transform: rotate(-135deg); }
