--- a/src/sass/components/_card-turn.scss
+++ b/src/sass/components/_card-turn.scss
@@ -93,10 +93,7 @@
     }
     //Back side styling
     &__cta {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%) translateY(-50%);
+        @include position-center;
         width: 90%;
         text-align: center;
     }
