--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -67,10 +67,7 @@
             height: 1.2rem;
             width: 1.2rem;
             border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            @include position-center;
             background-color: $color-primary;
             opacity: 0;
             transition: opacity .2s;
