--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
     background-color: $color-grey-dark-3;
-    padding: 5rem 0;
+    padding: 3rem 0;
     font-size: 1.4rem;
     &__logo-box {
         text-align: center;
-        margin-bottom: 6rem;
+        margin-bottom:3rem;
     }
     &__logo {
-        width: 15rem;
+        width: 10rem;
         height: auto;
     }
     &__navigation {
@@ -35,7 +35,7 @@
         }
         &:hover,
         &:active {
-            color: $color-tertiary-dark;
+            color: $color-grey-light-2;
             background-color: $color-grey-dark-3;
             box-shadow: 0 .5rem 1.5rem rgba($color-grey-light-2, .4);
             transform: scale(1.1);
