--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $color-tertiary-dark: rgb(72, 230, 32);
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
 //default font size
 $default-font-size: 1.6rem;
