--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -8,21 +8,44 @@
         z-index: 10;
         transition: all .2s;
         outline-offset: 2rem;
+        @include responsive(tab-port) {
+            float: left;
+            position: relative;
+            width:33.33333333%;
+            box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+        }
         &--p1 {
             left: 0;
             top: -2rem;
+            @include responsive(tab-port) {
+                top: 0;
+                transform: scale(1.2);
+            }
         }
         &--p2 {
             right: 0;
-            top: 2rem;
+            top: -2rem;
+            @include responsive(tab-port) {
+                top: 1rem;
+                transform: scale(1.3);
+                z-index: 15;
+            }
         }
         &--p3 {
             left: 40%;
             top: 7rem;
+            @include responsive(tab-port) {
+                top: 0;
+                left: 0;
+                transform: scale(1.1);
+            }
         }
         &--p4 {
             left: 10%;
             top: 10rem;
+            @include responsive(tab-port) {
+               display: none;
+            }
         }
         &:hover {
             outline: 1.5rem solid $color-primary;
