--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -11,6 +11,10 @@
         width: 90%;
         display: block;
         transition: all .3s;
+        @include responsive(tab-port) {
+            width: 100%;
+            
+        }
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -42,6 +46,11 @@
     &__radio-group {
         width: 50%;
         display: inline-block;
+        @include responsive(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+            
+        }
     }
     &__radio-label {
         font-size: $default-font-size;
