--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -3,6 +3,13 @@
     margin: 0 auto;
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+        @include responsive(tab-port) {
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+    @include responsive(tab-port) {
+       max-width: 50rem;
+       padding: 0 2rem;
     }
     @include clearfix;
 
@@ -10,6 +17,14 @@
         float: left;
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+            @include responsive(tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+
+        @include responsive(tab-port) {
+            width: 100% !important;
         }
     }
 
