--- a/src/sass/layout/_navigation.scss
+++ b/src/sass/layout/_navigation.scss
@@ -15,6 +15,14 @@
         box-shadow: 1rem 1rem 3rem rgba($color-primary-dark, .2);
         text-align: center;
         cursor: pointer;
+        @include responsive(tab-port) {
+            top: 4rem;
+            right: 4rem;
+        }
+        @include responsive(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
     }
     &__background {
         height: 6rem;
@@ -26,6 +34,14 @@
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
         z-index: 100;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
+        @include responsive(tab-port) {
+            top: 4.5rem;
+            right: 4.5rem;
+        }
+        @include responsive(phone) {
+            top: 3rem;
+            right: 3rem;
+        }
     }   
     &__nav {
         height: 100vh;
