--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/bg-video";
 @import "components/booking";
 @import "components/form";
+@import "components/popup";
 @import "layout/header";
 @import "layout/grid";
 @import "layout/footer";
