--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -2,6 +2,9 @@
     background-color: $color-grey-light-1;
     padding: 25rem 0;
     margin-top: -10vh;
+    @include responsive(tab-port) {
+        padding: 20rem 0;
+    }
 }
 
 .section-features {
@@ -12,17 +15,26 @@
     &>* {
         transform: skewY(7deg);
     }
+    @include responsive(tab-port) {
+        padding: 10rem o;
+    }
 }
 
 .section-destinations {
     background-color: $color-grey-light-1;
     padding: 25rem 0 15rem 0;
     margin-top: -9rem;
+    @include responsive(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
 }
 
 .section-testimonials {
     padding: 15rem 0;
     position: relative;
+    @include responsive(tab-port) {
+        padding: 10rem 0;
+    }
 }
 
 .section-book {
