--- a/src/index.css
+++ b/src/index.css
@@ -368,13 +368,25 @@ body {
         background-image: linear-gradient(to right bottom, #85e76d, #48e620); }
       .card__side--back-3 {
         background-image: linear-gradient(to right bottom, #053cf7, #05207b); }
+      .card__side--back-index-0 {
+        background-image: linear-gradient(to right bottom, #e7a46d, #e97516); }
+      .card__side--back-index-1 {
+        background-image: linear-gradient(to right bottom, #85e76d, #48e620); }
+      .card__side--back-index-2 {
+        background-image: linear-gradient(to right bottom, #053cf7, #05207b); }
+      .card__side--back-index-3 {
+        background-image: linear-gradient(to right bottom, #e7a46d, #e97516); }
+      .card__side--back-index-4 {
+        background-image: linear-gradient(to right bottom, #85e76d, #48e620); }
+      .card__side--back-index-5 {
+        background-image: linear-gradient(to right bottom, #053cf7, #05207b); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
   .card__picture {
     background-size: cover;
-    height: 23rem;
+    height: 30rem;
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
@@ -386,12 +398,20 @@ body {
       background-image: linear-gradient(to right bottom, #85e76d, #48e620), url(./images/pic2.jpg); }
     .card__picture-3 {
       background-image: linear-gradient(to right bottom, #053cf7, #05207b), url(./images/pic3.jpg); }
+    .card__picture-index-0 {
+      background-image: linear-gradient(to right bottom, #e7a46d, #e97516), url(./images/is-web/rej1.jpg); }
+    .card__picture-index-1 {
+      background-image: linear-gradient(to right bottom, #85e76d, #48e620), url(./images/is-web/bl1.jpg); }
+    .card__picture-index-2 {
+      background-image: linear-gradient(to right bottom, #053cf7, #05207b), url(./images/is-web/east_main-road.jpg); }
+    .card__picture-index-3 {
+      background-image: linear-gradient(to right bottom, #e7a46d, #e97516), url(./images/is-web/east_main-road2.jpg); }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
     color: #fff;
     position: absolute;
-    top: 12rem;
+    top: 10rem;
     right: 2rem;
     text-align: right;
     width: 75%; }
@@ -405,6 +425,14 @@ body {
       background-image: linear-gradient(to right bottom, rgba(133, 231, 109, 0.85), rgba(72, 230, 32, 0.85)); }
     .card__heading-span-3 {
       background-image: linear-gradient(to right bottom, rgba(5, 60, 247, 0.85), rgba(5, 32, 123, 0.85)); }
+    .card__heading-span-index-0 {
+      background-image: linear-gradient(to right bottom, rgba(231, 164, 109, 0.85), rgba(233, 117, 22, 0.85)); }
+    .card__heading-span-index-1 {
+      background-image: linear-gradient(to right bottom, rgba(133, 231, 109, 0.85), rgba(72, 230, 32, 0.85)); }
+    .card__heading-span-index-2 {
+      background-image: linear-gradient(to right bottom, rgba(5, 60, 247, 0.85), rgba(5, 32, 123, 0.85)); }
+    .card__heading-span-index-3 {
+      background-image: linear-gradient(to right bottom, rgba(231, 164, 109, 0.85), rgba(233, 117, 22, 0.85)); }
   .card__detail {
     padding: 3rem;
     margin: 0 auto; }
