--- a/src/index.css
+++ b/src/index.css
@@ -347,6 +347,16 @@ body {
   -moz-perspective: 150rem;
   position: relative;
   height: 50rem; }
+  .card__image {
+    max-height: 20rem;
+    width: 100%; }
+  .card__text-booking {
+    text-align: center;
+    color: #000;
+    padding: 2rem 1rem; }
+  .card__text-heading2 {
+    padding: 2rem;
+    text-align: center; }
   .card__side {
     height: 50rem;
     transition: all .8s ease;
