--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $color-secondary-light:rgb(231, 164, 109);
 $color-secondary-dark: rgb(233, 117, 22);
 $color-tertiary-light:rgb(133, 231, 109);
 $color-tertiary-dark: rgb(72, 230, 32);
+$color-four-light:#D435B2;
+$color-four-dark:#6D0D5A;
 //Grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
